Unfortunately, boto3 lacks s3 sync capability like the command line tool. Here is initial attempt at recreating using boto3.

--- a/config/def.yaml
+++ b/config/def.yaml
@@ -1,2 +1,5 @@
+log_directory: "/report_service/logs/final"
+node_dirs: ["geo"]
 profile_name: "saml-pub"
 s3_bucket: "pds-web-analytics-cloud"
+s3_logdir: "logs"
