Create a dict of representing first two levels of log folder structure so can configure which app directory log files should get sync'd

--- a/config/def.yaml
+++ b/config/def.yaml
@@ -1,5 +1,12 @@
-log_directory: "/report_service/logs/final"
-node_dirs: ["geo"]
-profile_name: "saml-pub"
-s3_bucket: "pds-web-analytics-cloud"
-s3_logdir: "logs"
+log_directory: /home/kaipak/datasets/report_service/logs/final
+node_dirs: [geo]
+profile_name: saml-pub
+s3_bucket: pds-web-analytics-cloud
+s3_logdir: logs
+subdirs:
+  geo:
+    - geo-pds
+  en:
+    - en-http-pdsweb1
+    - en-http-pdsweb2
+
