--- a/config/def.yaml
+++ b/config/def.yaml
@@ -1,12 +1,11 @@
 log_directory: /home/kaipak/datasets/report_service/logs/final
-node_dirs: [geo]
 profile_name: saml-pub
 s3_bucket: pds-web-analytics-cloud
-s3_logdir: logs
+s3_logdir: logs_dev
 subdirs:
   geo:
     - geo-pds
   en:
-    - en-http-pdsweb1
-    - en-http-pdsweb2
+    - en-http-pdscloud-prod1
+    - en-http-pdscloud-prod2
 
