Remove previous sync method in favor of simplified one.

--- a/config/def.yaml
+++ b/config/def.yaml
@@ -1,10 +1,8 @@
-log_directory: /home/kaipak/datasets/report_service/logs/final
+log_directory: /report_service/logs/final
 profile_name: saml-pub
 s3_bucket: pds-web-analytics-cloud
-s3_logdir: logs_dev
+s3_logdir: logs
 subdirs:
-  geo:
-    - geo-pds
   en:
     - en-http-pdscloud-prod1
     - en-http-pdscloud-prod2
