--- a/config/def.yaml
+++ b/config/def.yaml
@@ -1,9 +1,13 @@
 log_directory: /report_service/logs/final
+#log_directory: /home/kaipak/datasets/report_service/logs/final
 profile_name: saml-pub
 s3_bucket: pds-web-analytics-cloud
 s3_logdir: logs
+#s3_logdir: logs_dev
 subdirs:
   en:
     - en-http-pdscloud-prod1
     - en-http-pdscloud-prod2
+  img:
+    - img-pdsimg1-http
 
