Add logstash config

--- a/config/logstash/web-analytics.conf
+++ b/config/logstash/web-analytics.conf
@@ -1,4 +1,15 @@
 input {
+# For testing purposes
+#  generator {
+#    lines => [
+#    '. - - [14/Dec/2024:11:09:27 -0500] "GET /holdings/nh-a-leisa-3-kem1-v1.0/dataset.shtml HTTP/1.1" 200 18000 "-" "Opera/9.18.(Windows NT 5.01; th-TH) Presto/2.9.173 Version/12.00"'
+#     '10.100.1.106 - - [02/May/2024:17:02:54 -0700] "GET / HTTP/1.1" 200 44153 "-" "ELB-HealthChecker/2.0"',
+#     '142.250.189.206 - - [02/May/2024:17:16:56 -0700] "GET /data/pvo-v-pos-5--vsocoords-12sec-v1.0/pv01_0010/data/omag/hires/orb0440.ffh HTTP/1.1" 200 1728 "-" "Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; bingbot/2.0; +http://www.bing.com/bingbot.htm) Chrome/116.0.1938.76 Safari/537.36"',
+#     '66.249.66.1 - - [30/Apr/2024:17:00:04 -0700] "GET /services/search/search?q=&f.facet_instrument.facet.prefix=3%2Cparticle%20detector%2Ccospin-low%20energy%20telescope%2C&fq=facet_target%3A%223%2Csatellite%2Cjupiter%20moon%2Cthebe%22&f.facet_target.facet.prefix=4%2Csatellite%2Cjupiter%20moon%2Cthebe%2C&f.facet_type.facet.prefix=2%2Ctarget%2C&fq=facet_investigation%3A%221%2Cgalileo%22&f.facet_investigation.facet.prefix=2%2Cgalileo%2C HTTP/1.1" 200 7017 "-" "Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; GPTBot/1.0; +https://openai.com/gptbot)"',
+#     'dc-vlan1725.nmsu.edu - - [04/Nov/2024:01:33:18 -0700] "GET /data_and_services/atmospheres_data/JUNO/jiram/data_raw/orbit37/JIR_LOG_IMG_EDR_2021289T201105_V01.LBL HTTP/1.1"404 196'
+    ]
+#    count => 1
+#  }
 
   # ATM
   s3 {
@@ -209,7 +220,7 @@ filter {
   # index_time field so that we can tell when records are ingested.  Later,
   # @timestamp will be overwritten with the timestamp of the logged request.
   mutate {
-    add_field => { "index_time" => "%{@timestamp}" }
+    add_field => { "[event][ingested]" => "%{@timestamp}" }
   }
 
   # Parse the logged request.  We assume that all logs have been converted into
