--- a/setup.cfg
+++ b/setup.cfg
@@ -42,8 +42,10 @@ classifiers =
 # packages it depends on, namespaces, and so forth.
 
 [options]
-#install_requires =
-    # Put your requirements here
+install_requires =
+    python-box~=7.3
+    boto3~=1.25
+    boto3-stubs[apigateway,cognito,essential]~=1.25
 
 # Change this to False if you use things like __file__ or __path__—which you
 # shouldn't use anyway, because that's what ``pkg_resources`` is for 🙂
