Add test data and configs
* Organize configs
* Add tests for local testing
* New ECS v8.17 schema mappings

--- a/setup.cfg
+++ b/setup.cfg
@@ -139,7 +139,7 @@ addopts = -n auto --cov=pds
 # and you can read more about the tool at https://flake8.pycqa.org/
 [flake8]
 max-line-length = 120
-extend-exclude = versioneer.py,_version.py,docs,tests,setup.py
+extend-exclude = _version.py,docs,tests,setup.py
 docstring_convention = google
 
 # Ignoring:
