Add the message timestamp to the index name

--- a/config/logstash/config/shared/pds-output-opensearch.conf
+++ b/config/logstash/config/shared/pds-output-opensearch.conf
@@ -9,7 +9,7 @@ output {
     } else {
         opensearch {
             ecs_compatibility => "v8"
-            index => "en-web-analytics"
+            index => "en-web-analytics-%{+YYYY-MM}"
             hosts => "https://p5qmxrldysl1gy759hqf.us-west-2.aoss.amazonaws.com:443"
             auth_type => {
                 type => 'aws_iam'
