--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -56,11 +56,23 @@ filter {
   grok {
     ecs_compatibility => "v8"
     match => { "message" => [
+        # Apache Combined Log Format
+        "%{COMBINEDAPACHELOG}",
+
+        # Apache Common Log Format
+        "%{COMMONAPACHELOG}",
+
         # IIS HTTP Log Format (with W3SVC)
         "%{TIMESTAMP_ISO8601:[event][start]} %{NOTSPACE:[server][site]} %{IP:[server][ip]} %{WORD:[http][request][method]} %{DATA:[url][path]}(?:%{URIPARAM:[url][query]})? %{NOTSPACE:[server][port]} %{NOTSPACE:[user][name]} %{IP:[source][address]} %{DATA:[user_agent][original]} %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][substatus]} %{NUMBER:[http][response][win32_status]} %{NUMBER:[http][response][body][bytes]} %{NUMBER:[http][request][body][bytes]} %{NUMBER:[event][duration]}",
 
         # IIS HTTP Log Format (without W3SVC)
         "%{TIMESTAMP_ISO8601:[event][start]} %{IP:[server][ip]} %{WORD:[http][request][method]} %{DATA:[url][path]} %{NOTSPACE:[url][query]} %{NOTSPACE:[server][port]} %{NOTSPACE:[user][name]} %{IP:[source][address]} %{DATA:[user_agent][original]} %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][substatus]} %{NUMBER:[http][response][win32_status]} %{NUMBER:[http][response][body][bytes]} %{NUMBER:[http][request][body][bytes]} %{NUMBER:[event][duration]}",
+
+        # W3C Extended Log File Format
+        "%{TIMESTAMP_ISO8601:[event][start]} %{WORD:[server][site]} %{IP:[server][ip]} %{WORD:[http][request][method]} %{URIPATH:[url][path]} %{NOTSPACE:[url][query]} %{NUMBER:[server][port]} %{NOTSPACE:[user][name]} %{IP:[source][address]} %{DATA:[user_agent][original]} %{NUMBER:[http][response][status_code]} %{NUMBER:[iis][sub_status]} %{NUMBER:[iis][win32_status]} %{NUMBER:[http][response][body][bytes]} %{NUMBER:[event][duration]}",
+
+        # W3C/IIS URI path is missing (represented by a dash)
+        "%{TIMESTAMP_ISO8601:[event]s[start]} %{WORD:[server][site]} %{IP:[server][ip]} %{WORD:[http][request][method]} (?:%{URIPATH:[url][path]}|-) %{NUMBER:[server][port]} %{NOTSPACE:[user][name]} %{IP:[source][address]} %{DATA:[user_agent][original]} %{NUMBER:[http][response][status_code]} %{NUMBER:[iis][sub_status]} %{NUMBER:[iis][win32_status]} %{NUMBER:[http][response][body][bytes]} %{NUMBER:[event][duration]}",
 
         # IIS HTTP Log Format (minimal fields)
         "%{TIMESTAMP_ISO8601:[event][start]} %{IP:[server][ip]} %{WORD:[http][request][method]} %{DATA:[url][path]} %{NOTSPACE:[url][query]} %{NOTSPACE:[server][port]} %{NOTSPACE:[user][name]} %{IP:[source][address]} %{DATA:[user_agent][original]} %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][substatus]} %{NUMBER:[http][response][win32_status]}",
@@ -70,12 +82,6 @@ filter {
 
         # ATM FTP Log Format
         "%{DAY} %{MONTH} %{MONTHDAY} %{TIME} %{YEAR} %{NUMBER:[process][pid]} %{IP:[source][address]} %{NUMBER:[http][response][body][bytes]} %{PATH:[url][path]} %{WORD:[event][action]} %{WORD:[event][type]} %{WORD:[event][direction]} %{WORD:[event][category]} %{NUMBER:[user][id]} %{WORD:[service][type]} %{NUMBER:[event][duration]} %{WORD:[file][name]} %{WORD:[file][extension]}",
-
-        # Apache Combined Log Format
-        "%{COMBINEDAPACHELOG}",
-
-        # Apache Common Log Format
-        "%{COMMONAPACHELOG}",
         
         # Handle ATM logs where the IP is already translated to a host
         "%{HOSTNAME:[source][address]} - - \[%{HTTPDATE:[event][start]}\] \"%{WORD:[http][request][method]} %{DATA:[url][original]} HTTP/%{NUMBER:[http][version]}\" %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][body][bytes]}",
@@ -84,7 +90,10 @@ filter {
         "%{IP:[source][address]} %{NOTSPACE:[user][ident]} %{NOTSPACE:[user][name]} \[%{HTTPDATE:[event][start]}\] \"%{WORD:[http][request][method]} %{URIPATH:[url][original]}(?: HTTP\/%{NUMBER:[http][version]})?\" %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][body][bytes]} \"%{DATA:[http][request][referrer]}\" \"%{DATA:[user_agent][original]}\"",
 
         # Apache-style log with IP first
-        "%{IP:[source][address]} - - \[%{HTTPDATE:[event][start]}\] \"%{WORD:[http][request][method]} %{DATA:[url][path]} HTTP/%{NUMBER:[http][version]}\" %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][body][bytes]} \"%{DATA:[http][request][referrer]}\" \"%{DATA:[user_agent][original]}\""
+        "%{IP:[source][address]} - - \[%{HTTPDATE:[event][start]}\] \"%{WORD:[http][request][method]} %{DATA:[url][path]} HTTP/%{NUMBER:[http][version]}\" %{NUMBER:[http][response][status_code]} %{NUMBER:[http][response][body][bytes]} \"%{DATA:[http][request][referrer]}\" \"%{DATA:[user_agent][original]}\"",
+
+        # Apache-style log invalid username
+        "%{IP:[source][address]} - %{DATA:[user][name]} \[%{HTTPDATE:[event][start]}\] \"%{WORD:[http][request][method]} %{URIPATHPARAM:[http][request][body][content]} HTTP/%{NUMBER:[http][version]}\" %{INT:[http][response][status_code]} %{INT:[http][response][body][bytes]} \"%{DATA:[http][request][referrer]}\" \"%{DATA:[user_agent][original]}\""
       ]
     }
     id => "grok_filter_initial_parse"
