--- a/tests/config/test-input-ftp.conf
+++ b/tests/config/test-input-ftp.conf
@@ -59,7 +59,7 @@ input {
       'Thu May  1 02:09:07 2025 1 171.107.117.70 1579 /IJW/2000_images/file with spaces.htm b _ o a 12345 ftp 0 * c',
 
       # Very long path
-      'Thu May  1 02:09:07 2025 1 171.107.117.70 1579 /IJW/2000_images/' + 'a' * 1000 + '.htm b _ o a 12345 ftp 0 * c',
+      'Thu May  1 02:09:07 2025 1 171.107.117.70 1579 /IJW/2000_images/\' + \'a\' * 1000 + \'.htm b _ o a 12345 ftp 0 * c',
       
       # Very large transfer size
       'Thu May  1 02:09:07 2025 1 171.107.117.70 999999999999 /IJW/2000_images/bc0101.htm b _ o a 12345 ftp 0 * c'
