Add additional recommended settings

--- a/config/logstash/config/logstash.yml
+++ b/config/logstash/config/logstash.yml
@@ -1,5 +1,20 @@
-pipeline.workers: 4                # Match vCPU count for t3.xlarge
-pipeline.batch.size: 125           # Tune as needed
+# ----------- Core Paths -----------
+#path.data: /var/lib/logstash       # Where LS stores its internal state - use default for now
+#path.logs: /var/log/logstash       # Log output - use default for now
+
+# ----------- Pipeline Configuration -----------
+pipeline.batch.size: 125           # Tune based on your instance size (t3.xlarge is good here)
+pipeline.workers: 4                # Matches vCPU count on t3.xlarge
+pipeline.ordered: false            # Enables parallel event processing
 pipeline.batch.delay: 5
-queue.type: persisted
-queue.max_bytes: 4gb
+queue.type: persisted              # durable disk-based buffering between inputs and filters/outputs
+queue.max_bytes: 2gb               # Rule of thumb: use 25%–50% of available disk on /var/lib/logstash/queue if you want high resiliency.
+queue.max_events: 2000
+
+# Use pipelines.yml, do NOT use path.config here
+path.config: ""                    # Must be blank or removed if using pipelines.yml
+path.pipeline: ${LOGSTASH_CONF_HOME}/pipelines.yml  # Adjust if your pipelines.yml is elsewhere
+
+
+# ----------- Log Level -----------
+log.level: info   
