--- a/config/logstash/config/pipelines/pipeline-pds-input-s3-rings.conf
+++ b/config/logstash/config/pipelines/pipeline-pds-input-s3-rings.conf
@@ -1,4 +1,34 @@
-filter {
+input {
+  # Rings
+  s3 {
+    bucket => "$S3_BUCKET_NAME"
+    region => "us-west-2"
+    prefix => "rings/rings-apache-metrics/opus"
+    add_field => {
+      "[organization][name]" => "rings"
+      "[url][domain]" => "opus.pds-rings.seti.org"
+      "[url][scheme]" => "https"
+      "[event][dataset]" => "rings.http"
+    }
+    ecs_compatibility => v8
+    id => "file_input_rings1"
+  }
+
+  s3 {
+    bucket => "$S3_BUCKET_NAME"
+    region => "us-west-2"
+    prefix => "rings/rings-apache-metrics/server"
+    add_field => {
+      "[organization][name]" => "rings"
+      "[url][domain]" => "pds-rings.seti.org"
+      "[url][scheme]" => "https"
+      "[event][dataset]" => "rings.http"
+    }
+    ecs_compatibility => v8
+    id => "file_input_rings2"
+  }
+
+}filter {
 
   # Currently, @timestamp is set to the current time.  We store that in the
   # index_time field so that we can tell when records are ingested.  Later,
@@ -387,7 +417,7 @@ filter {
     ecs_compatibility => "v8"
     source => "[user_agent][original]"
     target => "[user_agent]"
-    regexes => "${LOGSTASH_CONF_HOME}/plugins/regexes.yaml"
+    regexes => "${LOGSTASH_CONF_HOME}/regexes.yaml"
     id => "useragent_filter_parse_apache_combined"
   }
 
@@ -478,4 +508,31 @@ filter {
       }
     }
   }
+}
+output {
+    if "bad_log" in [tags] or "_grok_parse_failure" in [tags] or "_dateparsefailure" in [tags] or "_url_parse_failure" in [tags] or "_invalid_http_method" in [tags] or "_template_variable" in [tags] or "_missing_url_original" in [tags] {
+        file {
+            path => "${HOME}/logstash/logs/bad_logs_%{+YYYY-MM}.txt"
+            codec => line { 
+                format => "[%{+YYYY-MM-dd HH:mm:ss}] [%{tags}] File: %{[file][path]} | Message: %{message} | Error: %{[error][message]}"
+            }
+        }
+    } else {
+        opensearch {
+            ecs_compatibility => "v8"
+            index => "en-web-analytics-%{+YYYY-MM}"
+            hosts => "https://p5qmxrldysl1gy759hqf.us-west-2.aoss.amazonaws.com:443"
+            auth_type => {
+                type => 'aws_iam'
+                aws_access_key_id => ''
+                aws_secret_access_key => ''
+                region => 'us-west-2'
+                service_name => 'aoss'
+            }
+            legacy_template => false
+            default_server_major_version => 2
+            document_id => "%{[event][hash]}"
+            manage_template => false
+        }
+    }
 }
