Update configs and build script

--- a/config/logstash/config/inputs/pds-input-s3-geo.conf
+++ b/config/logstash/config/inputs/pds-input-s3-geo.conf
@@ -1,7 +1,7 @@
 input {
   # GEO
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "geo/geo-an/"
     add_field => {
@@ -14,7 +14,7 @@ input {
   }
 
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "geo/geo-ode/"
     add_field => {
@@ -27,7 +27,7 @@ input {
   }
 
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "geo/geo-ftp"
     add_field => {
@@ -40,7 +40,7 @@ input {
   }
 
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "geo/geo-pds"
     add_field => {
@@ -54,7 +54,7 @@ input {
   }
 
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "geo/geo-speclib"
     add_field => {
