--- a/config/logstash/config/inputs/pds-input-s3-naif.conf
+++ b/config/logstash/config/inputs/pds-input-s3-naif.conf
@@ -1,7 +1,7 @@
 input {
   # NAIF
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "naif/naif-httpdlogs"
     add_field => {
