--- a/config/logstash/config/inputs/pds-input-s3-sbn.conf
+++ b/config/logstash/config/inputs/pds-input-s3-sbn.conf
@@ -1,7 +1,7 @@
 input {
   # SBN
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "sbn/sbn-apache-http/"
     add_field => {
@@ -15,7 +15,7 @@ input {
   }
 
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "sbn/sbn-psi-tomcat/"
     add_field => {
