--- a/config/logstash/config/shared/pds-output-opensearch.conf
+++ b/config/logstash/config/shared/pds-output-opensearch.conf
@@ -10,7 +10,7 @@ output {
         opensearch {
             ecs_compatibility => "v8"
             index => "en-web-analytics-%{+YYYY-MM}"
-            hosts => "https://p5qmxrldysl1gy759hqf.us-west-2.aoss.amazonaws.com:443"
+            hosts => "${AOSS_URL}"
             auth_type => {
                 type => 'aws_iam'
                 aws_access_key_id => ''
