--- a/config/logstash/config/inputs/pds-input-s3-atm.conf
+++ b/config/logstash/config/inputs/pds-input-s3-atm.conf
@@ -1,7 +1,7 @@
 input {
   # ATM
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "atm/atm-apache-http/"
     add_field => {
