--- a/config/logstash/config/inputs/pds-input-s3-en.conf
+++ b/config/logstash/config/inputs/pds-input-s3-en.conf
@@ -1,7 +1,7 @@
 input {
   # EN
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "en/"
     add_field => {
