--- a/config/logstash/config/inputs/pds-input-s3-rings.conf
+++ b/config/logstash/config/inputs/pds-input-s3-rings.conf
@@ -1,7 +1,7 @@
 input {
   # Rings
   s3 {
-    bucket => "$S3_BUCKET_NAME"
+    bucket => "${S3_BUCKET_NAME}"
     region => "us-west-2"
     prefix => "rings/rings-apache-metrics/opus"
     add_field => {
