--- a/config/logstash/config/shared/pds-output-opensearch.conf
+++ b/config/logstash/config/shared/pds-output-opensearch.conf
@@ -1,7 +1,7 @@
 output {
     if "bad_log" in [tags] or "_grok_parse_failure" in [tags] or "_dateparsefailure" in [tags] or "_url_parse_failure" in [tags] or "_invalid_http_method" in [tags] or "_template_variable" in [tags] or "_missing_url_original" in [tags] {
         file {
-            path => "${HOME}/logstash/logs/bad_logs_%{+YYYY-MM}.txt"
+            path => "/tmp/bad_logs_%{+YYYY-MM}.txt"
             codec => line { 
                 format => "[%{+YYYY-MM-dd HH:mm:ss}] [%{tags}] File: %{[file][path]} | Message: %{message} | Error: %{[error][message]}"
             }
@@ -9,7 +9,7 @@ output {
     } else {
         opensearch {
             ecs_compatibility => "v8"
-            index => "en-web-analytics-%{+YYYY-MM}"
+            index => "${INDEX_PREFIX}-%{+YYYY-MM}"
             hosts => "${AOSS_URL}"
             auth_type => {
                 type => 'aws_iam'
