Update handling of queryparams

--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -374,6 +374,16 @@ filter {
         urldecode {
           field => "[url][queryparams]"
         }
+        ruby {
+          code => '
+            if event.get("[url][queryparams]").is_a?(Hash)
+              queryparams = event.get("[url][queryparams]")
+              queryparams.each do |k, v|
+                event.set("[url][queryparams][#{k}]", v.to_s)
+              end
+            end
+          '
+        }
       }
     } else {
       mutate {
