Remove references to invalid env var

--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -397,7 +397,7 @@ filter {
     ecs_compatibility => "v8"
     source => "[user_agent][original]"
     target => "[user_agent]"
-    regexes => "${LOGSTASH_CONF_HOME}/plugins/regexes.yaml"
+    regexes => "${LS_SETTINGS_DIR}/plugins/regexes.yaml"
     id => "useragent_filter_parse_apache_combined"
   }
 
