Fix syntax errors in config

--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -175,39 +175,67 @@ filter {
           "[event][action]" => "%{[ftp][command]}"
           "[event][category]" => ["file", "network"]
           "[event][type]" => ["access", "info"]
-          "[event][outcome]" => "%{[http][response][status_code] < 400 ? 'success' : 'failure'}"
         }
         remove_field => ["[ftp][command]"]
+      }
+      
+      # Set outcome based on status code
+      if [http][response][status_code] and [http][response][status_code] < 400 {
+        mutate {
+          add_field => { "[event][outcome]" => "success" }
+        }
+      } else {
+        mutate {
+          add_field => { "[event][outcome]" => "failure" }
+        }
       }
     } else {
       drop {}
     }
   }
 
-  # Map FTP status codes to ECS outcome
-  if [http][response][status_code] {
-    mutate {
-      add_field => {
-        "[event][outcome]" => "%{[http][response][status_code] < 400 ? 'success' : 'failure'}"
+  # Map HTTP status codes to ECS outcome
+  if [http][response][status_code] and ![event][outcome] {
+    if [http][response][status_code] < 400 {
+      mutate {
+        add_field => { "[event][outcome]" => "success" }
+      }
+    } else {
+      mutate {
+        add_field => { "[event][outcome]" => "failure" }
       }
     }
   }
 
-  # Array to String Conversion
-  mutate {
-    replace => {
-      "[source][address]" => "%{[source][address].is_a?(Array) ? [source][address].first : [source][address]}"
-      "[url][path]" => "%{[url][path].is_a?(Array) ? [url][path].first : [url][path]}"
-      "[url][domain]" => "%{[url][domain].is_a?(Array) ? [url][domain].first : [url][domain]}"
+  # Array to String Conversion - Use native split filter for efficiency
+  if [source][address] {
+    split {
+      field => "[source][address]"
+      target => "[source][address]"
+      limit => 1
+    }
+  }
+  
+  if [url][path] {
+    split {
+      field => "[url][path]"
+      target => "[url][path]"
+      limit => 1
+    }
+  }
+  
+  if [url][domain] {
+    split {
+      field => "[url][domain]"
+      target => "[url][domain]"
+      limit => 1
     }
   }
 
-  # Query Parameter Encoding
+  # Query Parameter Encoding - Use native urldecode filter
   if [url][queryparams] {
-    mutate {
-      replace => {
-        "[url][queryparams]" => "%{URI.encode([url][queryparams].to_s)}"
-      }
+    urldecode {
+      field => "[url][queryparams]"
     }
   }
 
@@ -280,19 +308,38 @@ filter {
     }
   }
 
-  # Domain Deduplication
-  mutate {
-    replace => {
-      "[url][domain]" => "%{[url][domain].is_a?(Array) ? [url][domain].select { |d| d != [source][address] }.first : [url][domain]}"
+  # Domain Deduplication - Use native filters where possible
+  if [url][domain] and [source][address] {
+    # If domain equals source address, remove it
+    if [url][domain] == [source][address] {
+      mutate {
+        remove_field => ["[url][domain]"]
+      }
+    }
+    # For array handling, we still need Ruby for complex filtering
+    else {
+      ruby {
+        code => '
+          domain = event.get("[url][domain]")
+          source_addr = event.get("[source][address]")
+          
+          if domain.is_a?(Array)
+            # Remove source address from domain array and take first remaining
+            filtered_domains = domain.select { |d| d != source_addr }
+            event.set("[url][domain]", filtered_domains.first || domain.first)
+          end
+        '
+      }
     }
   }
 
-  # HTTP Method Validation
-  mutate {
-    replace => {
-      "[http][request][method]" => "%{[http][request][method].upcase}"
+  # HTTP Method Validation - Use native uppercase filter
+  if [http][request][method] {
+    uppercase {
+      field => "[http][request][method]"
     }
   }
+  
   if [http][request][method] and [http][request][method] != "" {
     if [http][request][method] !~ "^(GET|POST|PUT|DELETE|HEAD|OPTIONS|PATCH)$" {
       mutate {
