Fix additional invalid config

--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -207,28 +207,34 @@ filter {
     }
   }
 
-  # Array to String Conversion - Use native split filter for efficiency
+  # Array to String Conversion - Handle arrays by taking first element
   if [source][address] {
-    split {
-      field => "[source][address]"
-      target => "[source][address]"
-      limit => 1
+    ruby {
+      code => '
+        if event.get("[source][address]").is_a?(Array)
+          event.set("[source][address]", event.get("[source][address]").first)
+        end
+      '
     }
   }
   
   if [url][path] {
-    split {
-      field => "[url][path]"
-      target => "[url][path]"
-      limit => 1
+    ruby {
+      code => '
+        if event.get("[url][path]").is_a?(Array)
+          event.set("[url][path]", event.get("[url][path]").first)
+        end
+      '
     }
   }
   
   if [url][domain] {
-    split {
-      field => "[url][domain]"
-      target => "[url][domain]"
-      limit => 1
+    ruby {
+      code => '
+        if event.get("[url][domain]").is_a?(Array)
+          event.set("[url][domain]", event.get("[url][domain]").first)
+        end
+      '
     }
   }
 
